Add Big Planet Comics and Story Collider events.
Big Planet Comics event submitted by a reader.

--- a/_posts/2016-04-16-cherry-blast-2016.md
+++ b/_posts/2016-04-16-cherry-blast-2016.md
@@ -23,7 +23,7 @@ location:
   city: Washington
   state: DC
   zip: 20001
-tags: [ ]
+tags: [ 'Comics and Anime' ]
 excerpt: >
   A New and enhanced Cherry Blast will transform Carnegie Library at Mt. Vernon
   Square as a premier 2016 National Cherry Blossom Festival event on April 16.
